@@ -40,8 +40,9 @@ _("\n"
 "\n"
 "There is full documentation of mtPaint's features contained in a handbook.  If you don't already have this, you can download it from the mtPaint website.\n"
 "\n"
-"If you are a developer and you have improved any part of mtPaint, you are very welcome to contact the maintainer to have these improvements merged into mtPaint for the benefit of all users.\n"
+"If you like mtPaint and you want to keep up to date with new releases, or you want to give some feedback, then the mailing lists may be of interest to you:\n"
 "\n"
+"http://sourceforge.net/mail/?group_id=155874\n"
 ),
 _("\n"
 "  Ctrl-N            Create new image\n"
